crates/tesshir/tests/fixtures/check/const_generic_argument_overflow.tess
struct Small<const N: u8> {
    data: [u8; N],
}

struct Bad {
    small: Small<256>,
}
